First working proof of concept for vsShaderOptions.
This is kind of a "state block" sort of concept, where you can insert
push/pop shaderoptions values onto a display list, and those
shaderoptions values are interpreted by the renderer, with most recently
set values overriding later ones.

Games can determine what those values mean, and wind up with different
shaders getting used depending on the options.  This lets you really
easily compile lots of stuff out of shaders during shadow passes or
similar.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -299,6 +299,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_Shader.h
 	VS/Graphics/VS_ShaderCache.cpp
 	VS/Graphics/VS_ShaderCache.h
+	VS/Graphics/VS_ShaderOptions.cpp
+	VS/Graphics/VS_ShaderOptions.h
 	VS/Graphics/VS_ShaderRef.cpp
 	VS/Graphics/VS_ShaderRef.h
 	VS/Graphics/VS_ShaderSuite.cpp
