--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -305,6 +305,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_ShaderRef.h
 	VS/Graphics/VS_ShaderSuite.cpp
 	VS/Graphics/VS_ShaderSuite.h
+	VS/Graphics/VS_ShaderUniformRegistry.cpp
+	VS/Graphics/VS_ShaderUniformRegistry.h
 	VS/Graphics/VS_ShaderValues.cpp
 	VS/Graphics/VS_ShaderValues.h
 	VS/Graphics/VS_ShaderVariant.cpp
@@ -419,6 +421,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_HashTable.h
 	#VS/Utils/VS_HashTableStore.cpp
 	VS/Utils/VS_HashTableStore.h
+	VS/Utils/VS_IntHashTable.cpp
+	VS/Utils/VS_IntHashTable.h
 	VS/Utils/VS_FloatImage.cpp
 	VS/Utils/VS_FloatImage.h
 	VS/Utils/VS_HalfFloatImage.cpp
