Disable HighDPI support on Windows, where it isn't supported properly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,6 +140,10 @@ endif()
 set(CMAKE_REQUIRED_LIBRARIES ${SDL_LIBRARY})
 include(CheckFunctionExists)
 check_function_exists( SDL_GL_GetDrawableSize HIGHDPI_SUPPORTED )
+if(WIN32)
+	set(HIGHDPI_SUPPORTED OFF)
+else(WIN32)
+endif(WIN32)
 
 include_directories(vectorstorm PUBLIC "${PROJECT_BINARY_DIR}/config")
 set( VECTORSTORM_INCLUDE_PATHS "${PROJECT_BINARY_DIR}/config" "${CURRENT_BINARY_DIR}/config" PARENT_SCOPE)
