Adjust search paths for SDL_image.h to work on non-OSX builds too
Yay, cross-platform development!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ if ( USE_SDL_SOUND )
 	find_library(SDL_MIXER_LIBRARY SDL2_mixer REQUIRED )
 endif()
 find_path(SDL_INCLUDE_DIR SDL2/SDL.h REQUIRED HINTS ${SDL_LIBRARY}/Headers)
-find_path(SDL_IMAGE_INCLUDE_DIR SDL_image.h REQUIRED HINTS SDL2/SDL_image.h;${SDL_LIBRARY}/Headers)
+find_path(SDL_IMAGE_INCLUDE_DIR SDL_image.h REQUIRED PATH_SUFFIXES SDL2 HINTS ${SDL_LIBRARY}/Headers)
 
 if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 	add_definitions("-D IS_64BIT")
