Adds a 'VS_GAMEPADS' configuration option.
If VS_GAMEPADS is disabled (default: enabled) then the vsInput system
will not attempt to read gamepads or joysticks.  This is useful if you
want to use a different input system, such as SteamInput or similar, and
don't want SDL's gamepad code getting in the way of it.

--- a/VS_Config.h.in
+++ b/VS_Config.h.in
@@ -1,4 +1,5 @@
 // Configured build settings, as detected by cmake
+#cmakedefine VS_GAMEPADS
 #cmakedefine VS_PRISTINE_BINDINGS
 #cmakedefine VS_OVERLOAD_ALLOCATORS
 #cmakedefine HIGHDPI_SUPPORTED
