--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,6 @@ if(WIN32)
 	find_file(PNG_DLL libpng16-16.dll REQUIRED)
 	find_file(JPEG_DLL libjpeg-9.dll REQUIRED)
 	find_file(SDL2_DLL SDL2.dll REQUIRED)
-	find_file(SDL2_IMAGE_DLL SDL2_image.dll REQUIRED)
 	if ( USE_SDL_SOUND )
 		find_file(SDL2_MIXER_DLL SDL2_mixer.dll REQUIRED)
 	endif()
@@ -118,7 +117,7 @@ if(WIN32)
 	endif()
 
 	set(VS_PLATFORM_DLLS ${PNG_DLL} ${JPEG_DLL} ${GLEW_DLL}
-		${ZLIB_DLL} ${SDL2_DLL} ${SDL2_IMAGE_DLL}
+		${ZLIB_DLL} ${SDL2_DLL}
 		${SDL2_MIXER_DLL} ${VORBIS_DLL} ${VORBISFILE_DLL}
 		${PHYSFS_DLL} ${OGG_DLL}
 		${DBGHELP_DLL}
