Adds option for Mac builds to be done inside or outside app bundles.
(Defaults to inside app bundle;  the old behaviour)

If you compile with the VS_APPBUNDLE option turned off, we'll expect the
data files to be in a 'Data' directory next to the executable, the same
as on other platforms.  This is actually surprisingly more convenient
during development, since OS X's Gatekeeper system is less likely to get
annoyed at you over app signing if your program hasn't been moved into
an app bundle.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,9 @@ option( VS_TOOL "Various adjustments for tool (non-game) support" NO )
 option( VS_TOOL "Various adjustments for tool (non-game) support" NO )
 option( VS_PRISTINE_BINDINGS "If enabled, we clear bindings after using them" NO )
 option( VS_TRACY "If enabled, support remote profiling via tracy" NO )
+if ( APPLE )
+	option(VS_APPBUNDLE "Build in app bundle" YES)
+endif()
 
 # If we have a choice between legacy libgl.so and more modern
 # libOpenGL.so (the "GL Vendor-Neutral Dispatch" library), let's
