--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,14 +30,11 @@ endif()
 #
 set( OpenGL_GL_PREFERENCE "GLVND" )
 find_package(OpenGL REQUIRED)
-find_library(SDL_LIBRARY SDL2 REQUIRED)
 find_package(ZLIB)
-# find_library(ZLIB_LIBRARY zlib REQUIRED)
 
 if ( USE_SDL_SOUND )
 	find_library(SDL_MIXER_LIBRARY SDL2_mixer REQUIRED )
 endif()
-find_path(SDL_INCLUDE_DIR SDL2/SDL.h REQUIRED HINTS ${SDL_LIBRARY}/Headers)
 
 if( CMAKE_SIZEOF_VOID_P EQUAL 8 )
 	add_definitions("-D IS_64BIT")
@@ -81,7 +78,6 @@ if(WIN32)
 	find_file(ZLIB_DLL zlib1.dll REQUIRED)
 	find_file(PNG_DLL libpng16-16.dll REQUIRED)
 	find_file(JPEG_DLL libjpeg-9.dll REQUIRED)
-	find_file(SDL2_DLL SDL2.dll REQUIRED)
 	if ( USE_SDL_SOUND )
 		find_file(SDL2_MIXER_DLL SDL2_mixer.dll REQUIRED)
 	endif()
@@ -120,7 +116,7 @@ if(WIN32)
 	endif()
 
 	set(VS_PLATFORM_DLLS ${PNG_DLL} ${JPEG_DLL} ${GLEW_DLL}
-		${ZLIB_DLL} ${SDL2_DLL}
+		${ZLIB_DLL}
 		${SDL2_MIXER_DLL} ${VORBIS_DLL} ${VORBISFILE_DLL}
 		${PHYSFS_DLL} ${OGG_DLL}
 		${DBGHELP_DLL}
@@ -134,7 +130,6 @@ endif()
 
 # Check our build environment and set any variables
 # which need setting
-set(CMAKE_REQUIRED_LIBRARIES ${SDL_LIBRARY})
 include(CheckFunctionExists)
 check_function_exists( SDL_GL_GetDrawableSize HIGHDPI_SUPPORTED )
 if(WIN32)
@@ -148,7 +143,7 @@ configure_file( "${PROJECT_SOURCE_DIR}/VS_Config.h.in"
 	"${PROJECT_BINARY_DIR}/config/VS_Config.h" )
 
 include_directories(
-	${SDL_INCLUDE_DIR}
+	${SDL2_INCLUDE_DIRS}
 	${SDLMIXER_INCLUDE_DIR}
 	${SDLIMAGE_INCLUDE_DIR}
 	${ZLIB_INCLUDE_DIRS}
@@ -556,13 +551,12 @@ endif()
 		${PRE_LIBRARIES}
 		${DBGHELP_LIBRARY}
 		${OPENGL_LIBRARIES}
-		# ${PNG_LIBRARY}
-		${SDL_LIBRARY}
 		${GLEW_LIBRARIES}
 		${ZLIB_LIBRARY}
 		${PTHREAD_LIBRARY}
 		${PHYSFS_LIBRARY}
 		${EXCHNDL_LIBRARY}
+		SDL2::SDL2-static
 		# ${PLATFORM_LIBRARIES}
 		)
 	if ( USE_SDL_SOUND )
