Convert vsInput string mode cursor to use byte offsets.
Previously it used code point indices, and omg byte offsets are so much
easier, now that I kind of have more of an idea about what I'm doing.

This commit also adds public domain uni-algo library for some unicode
processing, most notably iterating over grapheme breaks within a string.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,6 +463,8 @@ set(UTILS_SOURCES
 	VS/Utils/fmt/format.cc
 	VS/Utils/fmt/format.h
 	VS/Utils/stb/stb.cpp
+
+	VS/Utils/uni-algo/src/cpp_uni_data.cpp
 	)
 set(SOURCES
 	VS/VS_Headers.h
