If configured to use zipfiles, we only load from zipfiles.
Previously, we supported both zipfiles and unpacked files.  But as a
practical matter, that was leading to people unpacking data files and
then crashing when those data files went out of date.  Now we ignore
those unpacked files in any build which is intending to load from the
zips!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ option( VS_TOOL "Various adjustments for tool (non-game) support" NO )
 option( VS_TOOL "Various adjustments for tool (non-game) support" NO )
 option( VS_PRISTINE_BINDINGS "If enabled, we clear bindings after using them" NO )
 option( VS_TRACY "If enabled, support remote profiling via tracy" NO )
+option( ZIPDATA "If enabled, we only mount zip-compressed data" NO )
 if ( APPLE )
 	option(VS_APPBUNDLE "Build in app bundle" YES)
 endif()
