--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -428,6 +428,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_LocString.h
 	VS/Utils/VS_Log.cpp
 	VS/Utils/VS_Log.h
+	VS/Utils/VS_MemoryProfiler.cpp
+	VS/Utils/VS_MemoryProfiler.h
 	VS/Utils/VS_Menu.cpp
 	VS/Utils/VS_Menu.h
 	VS/Utils/VS_MeshMaker.cpp
