Adds a 'vsRawImage' class for feeding image data into textures.
This is only partially implemented and it's kind of a proof of concept;
right now it only handles 2-channel uint16 textures, but the API is
there to make it handle more than that.  Just needs a bit of time and
effort to fix it up!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -420,6 +420,8 @@ set(UTILS_SOURCES
 	VS/Utils/VS_HalfIntImage.h
 	VS/Utils/VS_Image.cpp
 	VS/Utils/VS_Image.h
+	VS/Utils/VS_RawImage.cpp
+	VS/Utils/VS_RawImage.h
 	VS/Utils/VS_LinkedList.h
 	VS/Utils/VS_LinkedListStore.h
 	VS/Utils/VS_LocalisationTable.cpp
