Proof of concept for setting vertex attributes via a VAO object.
There should be virtually no performance change from this (maybe even a
slight regression) since we're still just using a single global VAO, but
this opens the door to have multiple which won't have to be resetting
all their attributes for every draw, maybe.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -316,6 +316,8 @@ set(GRAPHICS_SOURCES
 	VS/Graphics/VS_TextureInternalIPhone.h
 	VS/Graphics/VS_TextureManager.cpp
 	VS/Graphics/VS_TextureManager.h
+	VS/Graphics/VS_VertexArrayObject.cpp
+	VS/Graphics/VS_VertexArrayObject.h
 	)
 set(INPUT_SOURCES
 	VS/Input/VS_Input.cpp
